--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,24 +1,95 @@
-header {
-  background-color: #89f7fe;
-  height: 80px;
+.contact-us {
+  width: 90px;
+}
+
+.header {
   display: flex;
-  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 40px;
+  margin-bottom: 18px;
+}
 
-  span {
-    padding-right: 20px;
-  }
+.logo {
+  width: 100px;
+  min-width: 100px;
+  height: 52px;
+}
 
-  a {
-    color: #000;
-    text-decoration: none;
+.index-logo {
+  width: 100px;
+  min-width: 100px;
+  height: 52px;
+}
 
-    &:not(:last-child) {
-      margin-right: 20px;
-    }
-    &:hover {
-      border-bottom: 1px solid #000;
-    }
-  }
+.logo:hover {
+  opacity: 0.5;
+}
+
+.logo:active {
+  opacity: 0.2;
+}
+
+.header-nav {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-left: 40px;
+}
+
+.list-links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style-type: none;
+  padding-left: 0px;
+}
+
+.list-link {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 134px;
+  list-style-type: none;
+  padding-left: 0px;
+}
+
+.header-link {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  text-transform: uppercase;
+  color: #1e0606;
+  margin-left: 20px;
+}
+
+.header-link:hover {
+  opacity: 0.5;
+}
+
+.header-link:active {
+  opacity: 0.2;
+}
+
+.header-search:hover {
+  opacity: 0.5;
+}
+
+.header-search:active {
+  opacity: 0.2;
+}
+
+.header-link-bold {
+  font-weight: bold;
+  margin: 0px;
+}
+
+.list-contact {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 
