--- a/src/components/header/index.html
+++ b/src/components/header/index.html
@@ -1,10 +1,15 @@
-<header>
-  <div class="container">
-    <span class="title-block title-block_one">
-      Header
-    </span>
-    <a href="/">Главная</a>
-    <a href="/pages/catalog">Каталог</a>
-    <a href="/pages/toys">Игрушки</a>
-  </div>
+<header class="header container">
+  <a><img class="index-logo" src="/static/images/logo.svg" alt="logo"></a>
+  <nav class="header-nav">
+    <ul class=" list-links">
+      <li><a class="header-link" href="/pages/blog/index.html">Blog</a></li>
+      <li><a class="header-link" href="/pages/catalog/index.html">Catalog</a></li>
+      <li><a class="header-link" href="/pages/toys/index.html">Toys</a></li>
+    </ul>
+    <ul class=" list-link">
+      <li><a href="#"><img class="header-search" src="/static/images/search-icon.svg" alt="search"></a></li>
+      <li class="contact-us"><a class="header-link header-link-bold " href="/pages/contact-us/index.html">Contact
+          Us</a></li>
+    </ul>
+  </nav>
 </header>
