--- a/src/components/header/index.html
+++ b/src/components/header/index.html
@@ -1,5 +1,5 @@
-<header class="header container">
-  <a><img class="index-logo" src="/static/images/logo.svg" alt="logo"></a>
+<header class=" container header">
+  <a href="@@href"><img class="index-logo" src="/static/images/logo.svg" alt="logo"></a>
   <nav class="header-nav">
     <ul class=" list-links">
       <li><a class="header-link" href="/pages/blog/index.html">Blog</a></li>
