--- a/src/pages/main/style.scss
+++ b/src/pages/main/style.scss
@@ -520,6 +520,8 @@
   text-transform: uppercase;
 }
 
+
+
 .modal-checkbox-indicator {
   position: relative;
   width: 19px;
@@ -538,7 +540,7 @@
   content: "";
   top: -2px;
   right: 0px;
-  background-image: url(/images/vector.png);
+  background-image: url(/static/images/vector.png);
   width: 14px;
   height: 14px;
 }
