--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,3 +1,5 @@
+/* header */
+
 .contact-us {
   width: 90px;
 }
@@ -85,11 +87,3 @@
   font-weight: bold;
   margin: 0px;
 }
-
-.list-contact {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-
