--- a/src/pages/catalog/style.scss
+++ b/src/pages/catalog/style.scss
@@ -1,3 +1,52 @@
-main.catalog-main {
- padding: 30px 0;
+.catalog {
+  margin-bottom: 60px;
+}
+
+.cat-title {
+  margin: 18px 0px 0px 0px;
+  }
+
+.bread-category {
+  margin-top: 16px;
+  margin-bottom: 17px;
+}
+
+.prod-list {
+  position: relative;
+  margin-right: 20px;
+  margin-bottom: 23px;
+}
+
+.prod-list:hover .product-title {
+  text-decoration: underline;
+}
+
+.ctg-list {
+  list-style-type: none;
+  padding-left: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px -10px 28px 0px;
+  padding-top: 8px;
+  
+}
+
+.prod-list:nth-child(4n + 4) {
+  margin-left: 200px;
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  max-width: 880px;
+  padding-left: 200px;
+}
+
+.mb10{
+  margin-bottom: 10px;
+}
+
+.description-info {
+  margin-top: 15px;
 }
